turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_operation_method_self_ref.rs
#![allow(dead_code)]
#![feature(arbitrary_self_types)]
#![feature(arbitrary_self_types_pointers)]

use turbo_tasks::Vc;

#[turbo_tasks::value]
struct Foobar;

#[turbo_tasks::value_impl]
impl Foobar {
    #[turbo_tasks::function(operation)]
    fn self_ref(&self) -> Vc<()> {
        Vc::cell(())
    }
}

fn main() {}
